--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
   "name": "login-form",
+  "homepage": "https://AraGor89.github.io/login-form",
   "private": true,
   "version": "0.0.0",
   "type": "module",
